# flowing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dashboard.py  demo.py  install.sh  pyproject.toml  requeriments.txt  requirements.txt  run.sh  send_task.py  show_trace.py  start_flowing.sh  trace.json
examples/: API_DOCUMENTATION.md  agent_server.py  autonomous_controller.py  base_agent.py  communication_utils.py  connect_example.py  economic_agent.py  economic_engine.py  multi_agent_demo.py  my_agent.py  my_agent_server.py  reviewer_agent.py  websocket_agent.py
flowing/: api_client.py  config.py  core.js  engine.py  prompts.py  schema.py  utils.py  validator.py
observability/: tracer.py
providers/: factory.py
schemas/: example_schema.json
src/: tracer.py
src/flowing/: cli.py  decorator.py  handler.py  llm_wrapper.py  prompt-capture-server.js  runtime.py
src/flowing.egg-info/: PKG-INFO  SOURCES.txt
src/flowing/agents/: agents.json  coder_agent.py  server.py
src/flowing/decision/: event.py  span.py
src/flowing/examples/: multi_agent_demo.py  simple_workflow.py
src/flowing/observability/: dashboard.py  tracer.py
