[project]
name = "flowing-os"
version = "0.1.0"
dependencies = [
    "click",
    "streamlit",
    "requests",
    "flask",
    "flask-socketio"
]

[project.scripts]
flowing = "flowing.cli:main"
[project.scripts]
flowing = "flowing.cli:main"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowing-os"
version = "0.1.2"
description = "Interoperability and observability layer for multi-agent AI systems"
readme = "README.md"
authors = [
    { name = "Joaquín Gabriel Arias" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "flask",
    "streamlit",
    "requests",
    "networkx",
    "plotly"
]

# THIS CREATES THE CLI COMMAND
[project.scripts]
flowing = "flowing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# include non-python files if needed
[tool.setuptools.package-data]
flowing = ["*.json"]
