[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowing-os"
version = "0.1.4"
description = "Interoperability and observability layer for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Joaquín Gabriel Arias" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask",
    "flask-socketio",
    "streamlit",
    "requests",
    "networkx",
    "plotly",
    "click"
]

[project.scripts]
# This tells pip: "Create a command named 'flowing' that runs main() inside src/flowing/cli.py"
flowing = "flowing.cli:main"

[tool.setuptools]
# This ensures setuptools looks inside the 'src' folder for your 'flowing' package
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flowing = ["*.json"]
