[project]
name = "flowing-os"
version = "0.1.7"
description = "Interoperability and observability layer for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Joaquín Gabriel Arias" }]

dependencies = [
    "flask>=2.0,<4.0",
    "flask-socketio>=5.0,<6.0",
    "streamlit>=1.30,<2.0",
    "requests>=2.25,<3.0",
    "networkx>=3.0,<4.0",
    "plotly>=5.0,<6.0",
    "click>=8.0,<9.0"
]

[project.scripts]
flowing = "flowing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flowing = ["**/*.json"]
